[gd_scene load_steps=5 format=3 uid="uid://cxl64go8kr6od"]

[ext_resource type="Theme" uid="uid://cqid6eqdw6f54" path="res://scenes/ui/ui.tres" id="1_aqpy5"]
[ext_resource type="Script" uid="uid://b5emlbe1ed4nt" path="res://scenes/ui/menus/title_screen.gd" id="1_eb34j"]
[ext_resource type="Texture2D" uid="uid://dv0q7mipj70mc" path="res://assets/graphics/backgrounds/title_screen.png" id="3_5ad1i"]
[ext_resource type="Texture2D" uid="uid://cxogmukk57tr1" path="res://assets/graphics/misc/transparent_menu_thing.png" id="3_cwfae"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_aqpy5")
script = ExtResource("1_eb34j")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5ad1i")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_cwfae")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 90.0
offset_top = -324.0
offset_right = 230.0
offset_bottom = -108.0
grow_vertical = 2
scale = Vector2(3, 3)
theme_override_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "PLAY"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "SETTINGS"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "CREDITS"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "EXIT"

[node name="TestButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1387.0
offset_top = 950.0
offset_right = 1557.0
offset_bottom = 989.0
scale = Vector2(3, 3)
size_flags_vertical = 3
text = "Test Level"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="TestButton" to="." method="_on_test_button_pressed"]
